# usage-claude-widget

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.cargo/: config.toml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  main.rs  usage.rs
